--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Dance Workshop Tour</title>
+	
+ 
+	
+	<!-- Load font-awesome icon library from CDN -->
+	<script src="https://kit.fontawesome.com/829ec01bd3.js" crossorigin="anonymous"></script>
+    <style>
+   
+  </style>
+</head>
+<body>
 test
+</body>
+</html>
+
