--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<!-- Load font-awesome icon library from CDN -->
 	<script src="https://kit.fontawesome.com/829ec01bd3.js" crossorigin="anonymous"></script>
     <style>
-   
+   body  {
+  background-image: url("paper.gif");
+  background-color: #cccccc;
+}
   </style>
 </head>
 <body>
