--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://kit.fontawesome.com/829ec01bd3.js" crossorigin="anonymous"></script>
     <style>
    body  {
-  background-image: url("paper.gif");
+  background-image: url("images/4748265.jpg");
   background-color: #cccccc;
 }
   </style>
