--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <style>
    body  {
   background-image: url("images/4748265.jpg");
-  background-color: #cccccc;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
 }
   </style>
 </head>
