--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   background-image: url("images/4748265.jpg");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover;
+  background-size: contain;
 }
   </style>
 </head>
