--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: contain;
+  height: 100vh;
+  width: 100vw;
 }
   </style>
 </head>
