--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
   height: 100vh;
   width: 100vw;
 }
+#btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: dodgerblue;
+  color: white;
+  font-size: 16px;
+  padding: 16px 30px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
   </style>
 </head>
 <body>
-test
+<a id="btn" href="#">Start</a>
 </body>
 </html>
 
