--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   border-radius: 5px;
   text-align: center;
 }
+  #btn:hover {
+  background-color: black;
+  color: white;
+}
   </style>
 </head>
 <body>
