--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 #btn {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 80%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: dodgerblue;
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-<a id="btn" href="tour.html">Start</a>
+	<a id="btn" href="tour.html"><b>START</b></a>
 </body>
 </html>
 
