--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: contain;
+  background-color: black;
   height: 100vh;
   width: 100vw;
 }
