--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: contain;
-  background-color: black;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAExJREFUKFNjtDt1/j8DEBwyM2QE0bgAI9EKsZnw4IYd2BYFjUNwW7BaR7RCbLYwVpyHWNNhiLCGMoXYdH+aGQe2hS99EX7PEK0Qmy0A730gC1oLjAoAAAAASUVORK5CYII=) repeat;
   height: 100vh;
   width: 100vw;
 }
