--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<script src="https://kit.fontawesome.com/829ec01bd3.js" crossorigin="anonymous"></script>
     <style>
    body  {
-  background-image: url("images/4748265.jpg");
+  background-image: url("images/4748265.jpg"), url(" url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23c3ac02' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: contain;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAExJREFUKFNjtDt1/j8DEBwyM2QE0bgAI9EKsZnw4IYd2BYFjUNwW7BaR7RCbLYwVpyHWNNhiLCGMoXYdH+aGQe2hS99EX7PEK0Qmy0A730gC1oLjAoAAAAASUVORK5CYII=) repeat;
+  background-color: #937636;
   height: 100vh;
   width: 100vw;
 }
